# dev-workbench

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-23-bancada-toolbox.md
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CommandPalette.tsx  CopyButton.tsx  Home.tsx  Settings.tsx  Sidebar.tsx  ToolShell.tsx  Topbar.tsx
src/lib/: escape.ts  fuzzy.test.ts  fuzzy.ts  lastTool.test.ts  lastTool.ts  tool.ts  window.ts
src/lib/themes/: apply.ts  custom.ts  index.ts  presets.ts  types.ts
src/store/: settings.ts
src/tools/: registry.ts
src/tools/base-converter/: BaseConverter.tsx  base.test.ts  base.ts  index.ts
src/tools/base64/: Base64Tool.tsx  base64.test.ts  base64.ts  index.ts
src/tools/case-converter/: CaseConverter.tsx  cases.test.ts  cases.ts  index.ts
src/tools/color-converter/: ColorConverter.tsx  convert.test.ts  convert.ts  index.ts
src/tools/cron-parser/: CronParser.tsx  cron.test.ts  cron.ts  index.ts
src/tools/csv-json/: CsvJson.tsx  convert.test.ts  convert.ts  index.ts
src/tools/curl-fetch/: CurlFetch.tsx  index.ts  parse.test.ts  parse.ts
src/tools/date-diff/: DateDiff.tsx  index.ts  logic.test.ts  logic.ts
src/tools/hash-generator/: HashGenerator.tsx  hash.test.ts  hash.ts  index.ts
src/tools/hash-password/: HashPassword.tsx  index.ts
src/tools/html-entities/: HtmlEntities.tsx  entities.test.ts  entities.ts  index.ts
src/tools/http-status/: HttpStatus.tsx  index.ts  statuses.ts
src/tools/json-formatter/: JsonFormatter.tsx  format.test.ts  format.ts  index.ts
src/tools/json-yaml/: JsonYaml.tsx  convert.test.ts  convert.ts  index.ts
src/tools/jwt-decoder/: JwtDecoder.tsx  decode.test.ts  decode.ts  index.ts
src/tools/jwt-encoder/: JwtEncoder.tsx  encode.test.ts  encode.ts  index.ts
src/tools/lorem-ipsum/: LoremIpsum.tsx  index.ts  lorem.test.ts  lorem.ts
src/tools/markdown-preview/: MarkdownPreview.tsx  index.ts  render.test.ts  render.ts
src/tools/password-generator/: PasswordGenerator.tsx  generate.test.ts  generate.ts  index.ts
src/tools/qr-code/: QrCode.tsx  index.ts
src/tools/regex-tester/: RegexTester.tsx  index.ts  match.test.ts  match.ts
src/tools/slug-generator/: SlugGenerator.tsx  index.ts  slug.test.ts  slug.ts
src/tools/sql-formatter/: SqlFormatter.tsx  format.test.ts  format.ts  index.ts
src/tools/string-escape/: StringEscape.tsx  escape.test.ts  escape.ts  index.ts
src/tools/text-diff/: TextDiff.tsx  index.ts
src/tools/timestamp/: TimestampConverter.tsx  convert.test.ts  convert.ts  index.ts
tasks/: prd-bancada-toolbox.md
updates/: latest.json
(+18 files in other folders)
